# cpp_project

./: .gitignore  readme.md
2024pr1/: CMakeLists.txt  project1.md
2024pr1/src/: calculator.c
2024pr1/version_/: calculator.c  v0.0.c  v1.0.c  v1.1.c  v2.0.c
2024pr2/: CMakeLists.txt
2024pr2/src/: main.c
2024pr3/src/: main.c
